# mockbot

./: .env.example  .gitignore  BETA_LAUNCH_CHECKLIST.md  DOCUMENTATION.md  HANDOFF.md  OVERHAUL_PLAN.md  PRODUCTION.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SETUP.md  ansv-bot.code-workspace  colors.json  launch.sh  main.py  mkdocs.yml  refactor_commands.py  replace_sqlite.py  requirements-dev.txt  requirements.txt  settings.example.conf  test_pt.py  test_pt_ansi.py  test_tts.py  webapp.py
bot/: brain.py  channel_manager.py  color_control.py  colors.py  commands.py  commands_intake.py  config.py  connection.py  core.py  custom_commands.py  database.py  db.py  events.py  interactive.py  logger.py  overlay.py  settings_registry.py  setup_wizard.py  trigger_policy.py  tts.py  tui.py  ui_managers.py  utils.py
bot/handlers/: __init__.py  eventsub.py  pubsub.py  raw_data.py  startup.py  tts.py
bot/tasks/: db_writer.py  heartbeat.py  live_stream_monitor.py  message_requests.py  sleep_monitor.py  timed_messages.py
bot/webui/: __init__.py  app.py  auth.py  cmds_api.py  settings_api.py  (+1 more)
docs/: commands.md  custom-commands.md  index.md  interactions.md  tts.md  variables.md  webui.md
mockbot-rs/: Cargo.toml
mockbot-rs/src/: main.rs  markov.rs
templates/: admin_monitoring.html  landing.html  public_base.html
tests/: conftest.py  test_events.py  test_settings_registry.py  test_trigger_policy.py  test_webui.py  test_webui_auth.py  test_webui_commands.py  test_webui_monitor.py  test_webui_settings.py  test_webui_tts.py
utils/: bot.py  config.py  user_db.py
(+10 files in other folders)
